# todo-api

./: .dockerignore  .env.example  .gitignore  README.md  compose.yaml  pyproject.toml  pytest.ini
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 32862275440e_.py  431cd365cd47_.py  7d4dae1571fd_.py  dd94ff27e7fe_.py  ec244296b8ec_.py
src/api/v1/: router.py
src/api/v1/routes/: auth.py  membership.py  project.py  (+3 more)
src/core/: cache.py  cache_service.py  config.py  exceptions.py  security.py
src/core/caching/: cache_keys.py  cache_manager.py  cache_service.py
src/core/messaging/: email.py  email_templates.py
src/core/security/: __init__.py  permissions.py
src/db/: base.py  session.py
src/infra/caching/: cache.py  cache_keys.py  cache_manager.py  cache_service.py
src/infra/db/: session.py
src/infra/logging/: logger.py
src/infra/messaging/: email_templates.py
src/infra/security/: __init__.py  auth.py  permissions.py
src/models/: __init__.py  membership.py  project.py  project_member.py  refresh_token.py  task.py  user.py
src/repos/: base.py  membership.py  project.py  refresh_token.py  task.py  user.py
src/schemas/: auth.py  pagination.py  project.py  search.py  task.py  user.py
src/services/: auth.py  base.py  membership.py  project.py  project_member.py  task.py  user.py
src/worker/: app.py  tasks.py
tests/: conftest.py  factories.py
tests/integration/: conftest.py
tests/integration/routes/: test_auth.py  test_project.py  test_task.py  test_user.py
tests/unit/: conftest.py  test_auth.py  test_project.py  test_task.py
