[project]
name = "todo-api"
version = "0.1.0"
description = "FastAPI Todo API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.2",
    "pwdlib[argon2]>=0.3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.48",
]
